--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TVS MG</title>
+  <title>SC BA</title>
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <style>
     html, body {
@@ -68,8 +68,8 @@
 
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script>
-    const FOLDER_ID = '1ckKE5gGfOwXih4_TjINg9S24cGR3S7wy';
-    const API_KEY = 'AIzaSyAjRQDeAS-6UdNXF2gzNRO2l5ObSRy68BI';
+    const FOLDER_ID = '1YxKevYkhB0XxzexRR03wvCaUSWR9g3qI';
+    const API_KEY = 'AIzaSyDr3C4pXmf0oOid8qzIPMfvg5tTzPujYa4';
 
     const carouselImages = document.getElementById('carousel-images');
     const errorMessage = document.getElementById('error-message');
